# SPUDlib-test

./: CMakeLists.txt
src/: CMakeLists.txt  testing.c
